[gd_scene load_steps=4 format=3 uid="uid://boss_enemy_001"]

[ext_resource type="Script" path="res://scripts/BossEnemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://boss_001" path="res://assets/boss_helicopter.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(120, 80)

[node name="BossEnemy" type="CharacterBody2D" groups=["enemy", "boss"]]
script = ExtResource("1")
collision_layer = 2
collision_mask = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="WeaponPoint1" type="Marker2D" parent="."]
position = Vector2(60, -20)

[node name="WeaponPoint2" type="Marker2D" parent="."]
position = Vector2(60, 0)

[node name="WeaponPoint3" type="Marker2D" parent="."]
position = Vector2(60, 20)

[node name="HealthBar" type="ProgressBar" parent="."]
position = Vector2(0, -60)
size = Vector2(120, 10)
max_value = 500.0
value = 500.0